located and fixed scrollbar css, removed resume border mordern theme

--- a/src/components/Modern/App.css
+++ b/src/components/Modern/App.css
@@ -65,6 +65,7 @@
     visibility: visible;
     position: absolute;
     z-index: 1;
+    background-color: rgb(23, 80, 129);
   }
   
   /* home page */
@@ -197,7 +198,7 @@
      margin-right: auto;
    }
   
-  #megawrap {
+  #megawrapmodern {
     width: 100%;
     height: 100%;
     background-color: rgb(255, 0, 0);
